--- a/VideoCommunication/package.json
+++ b/VideoCommunication/package.json
@@ -2,12 +2,13 @@
   "name": "webrtc-demo",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --https --host",
     "build": "vite build",
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-mkcert": "^1.6.4"
   },
   "dependencies": {
     "firebase": "^8.2.10"
